--- a/styles.css
+++ b/styles.css
@@ -342,6 +342,7 @@ body[light-mode="dark"] .password {
         inset .5px 0 0 #d4d2de,
         inset -.5px 0 0 #d4d2de,
         inset 1px 2px 1px 1px #b5b5c3;
+    -webkit-mask-image: radial-gradient(#fff, #000);
     mask-image: radial-gradient(#fff, #000);
     transition: all .4s;
 
